⚡️ 底部导航栏自动收起

--- a/src/Memo.Blog.App/Components/Layout/MainLayout.razor
+++ b/src/Memo.Blog.App/Components/Layout/MainLayout.razor
@@ -7,7 +7,7 @@
                 @Body
             </MMain>
 
-            <BottomNavigation />
+            <BottomNavigation Items="NavigationItems" IsPermanentPath="IsPermanentPath" />
         </ChildContent>
 
         <ErrorContent>
