--- a/src/Memo.Blog.App/Components/Layout/Navigations/BottomNavigation.razor
+++ b/src/Memo.Blog.App/Components/Layout/Navigations/BottomNavigation.razor
@@ -1,7 +1,7 @@
 ﻿<MBottomNavigation InputValue="Show"
                    Mandatory="true"
                    App="true">
-    @foreach (var item in navigationItems)
+    @foreach (var item in Items)
     {
         <BottomNavigationItem @key="item.Path" Value="item"/>
     }
