--- a/src/Memo.Blog.App/Components/Layout/Navigations/BottomNavigation.razor
+++ b/src/Memo.Blog.App/Components/Layout/Navigations/BottomNavigation.razor
@@ -1,4 +1,5 @@
 ﻿<MBottomNavigation InputValue="Show"
+                   Class="@($"justify-space-around {(Show ? "" : "m-bottom-navigation-hidden")}")"
                    Mandatory="true"
                    App="true">
     @foreach (var item in Items)
