--- a/src/Memo.Blog.App/Components/Routes.razor
+++ b/src/Memo.Blog.App/Components/Routes.razor
@@ -1,6 +1,30 @@
-﻿<Router AppAssembly="@typeof(MauiProgram).Assembly">
+﻿@using Memo.Blog.App.Components.Pages.Login
+
+<Router AppAssembly="@typeof(MauiProgram).Assembly"
+        AdditionalAssemblies="new[] { typeof(MainLayout).Assembly }"
+        OnNavigateAsync="HandleOnNavigate">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(Layout.MainLayout)" />
+        <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
+            <NotAuthorized>
+                @if (context.User.Identity?.IsAuthenticated is not true)
+                {
+                    <RedirectToLogin/>
+                }
+                else
+                {
+                    <p role="alert">You are not authorized to access the resource.</p>
+                }
+            </NotAuthorized>
+        </AuthorizeRouteView>
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
     </Found>
 </Router>
+
+@code { 
+    private string _path = string.Empty;
+
+    private void HandleOnNavigate(NavigationContext context)
+    {
+        _path = context.Path;
+    }
+}
