--- a/src/Memo.Blog.App/Components/Pages/Mine/MinePage.razor
+++ b/src/Memo.Blog.App/Components/Pages/Mine/MinePage.razor
@@ -1,6 +1,14 @@
 ﻿@page "/mine"
 
 <h3>MinePage</h3>
+<MButton Block
+         Class="text-capitalize"
+         Rounded
+         Large
+         Color="primary"
+         OnClick="@LogoutAsync">
+    Login
+</MButton>
 
 @code {
 
