💄  优化登陆样式

--- a/src/Memo.Blog.App/Components/Layout/Navigations/BottomNavigation.razor
+++ b/src/Memo.Blog.App/Components/Layout/Navigations/BottomNavigation.razor
@@ -1,7 +1,10 @@
-﻿<MBottomNavigation InputValue="Show"
+﻿<MBottomNavigation App
+                   Routable
+                   Grow
+                   Shift
+                   InputValue="Show"
                    Class="@($"justify-space-around {(Show ? "" : "m-bottom-navigation-hidden")}")"
-                   Mandatory="true"
-                   App="true">
+                   Color="primary">
     @foreach (var item in Items)
     {
         <BottomNavigationItem @key="item.Path" Value="item"/>
