--- a/src/Memo.Blog.App/Components/Pages/User/User.razor
+++ b/src/Memo.Blog.App/Components/Pages/User/User.razor
@@ -1,4 +1,4 @@
-﻿@page "/mine"
+﻿@page "/user"
 
 <h3>MinePage</h3>
 <MButton Block
@@ -9,7 +9,3 @@
          OnClick="@LogoutAsync">
     退出登录
 </MButton>
-
-@code {
-
-}
