--- a/src/Memo.Blog.App/Components/_Imports.razor
+++ b/src/Memo.Blog.App/Components/_Imports.razor
@@ -10,6 +10,7 @@
 @using Memo.Blog.App
 @using Memo.Blog.App.Components
 @using Masa.Blazor
+@using Masa.Blazor.Presets;
 
 @using Memo.Blog.App.Components.Layout
 @using Memo.Blog.App.Components.Layout.Navigations
