--- a/src/Memo.Blog.App/Components/Layout/MainLayout.razor
+++ b/src/Memo.Blog.App/Components/Layout/MainLayout.razor
@@ -1,7 +1,5 @@
 ﻿@inherits LayoutComponentBase
 
-<link href="css/status-bar-and-navigation-bar.css" rel="stylesheet" />
-
 <MApp>
     <MMain>
         <MErrorHandler>
@@ -19,6 +17,6 @@
         </MErrorHandler>
     </MMain>
 
-    <BottomNavigation Items="NavigationItems" />
+    <BottomNavigation />
 </MApp>
 
