--- a/src/Memo.Blog.App/Components/Layout/Navigations/BottomNavigation.razor
+++ b/src/Memo.Blog.App/Components/Layout/Navigations/BottomNavigation.razor
@@ -3,7 +3,7 @@
                    Grow
                    @bind-Value="_current"
                    Color="primary">
-    @foreach (var item in Items)
+    @foreach (var item in navItems)
     {
         <MButton Href="@item.Path">
             <MIcon>
