--- a/src/Memo.Blog.App/Components/_Imports.razor
+++ b/src/Memo.Blog.App/Components/_Imports.razor
@@ -13,6 +13,7 @@
 @using Masa.Blazor.Presets;
 
 @using Memo.Blog.App.Components.Layout
+@using Memo.Blog.App.Components.Components
 @using Memo.Blog.App.Components.Layout.Navigations
 
 @using Memo.Blog.App.Services.App
