--- a/src/Memo.Blog.App/Components/Pages/Home/Home.razor
+++ b/src/Memo.Blog.App/Components/Pages/Home/Home.razor
@@ -1,7 +1,17 @@
 ﻿@page "/"
 
-<h3>Home</h3>
+<Tabs @bind-Value="tab"
+      Items="tabItems">
+</Tabs>
 
-@code {
-
-}
+<MSwiper Index=@tab.ToInt32()>
+    <MSwiperSlide Style="background-color: #ebedf0" Class="d-flex align-center justify-center">
+        <h3> Slide 1 </h3>
+    </MSwiperSlide>
+    <MSwiperSlide Style="background-color: #ebedf0" Class="d-flex align-center justify-center">
+        <h3> Slide 2 </h3>
+    </MSwiperSlide>
+    <MSwiperSlide Style="background-color: #ebedf0" Class="d-flex align-center justify-center">
+        <h3> Slide 3 </h3>
+    </MSwiperSlide>
+</MSwiper>
