--- a/src/Memo.Blog.App/Components/Components/Moment/MomentList.razor
+++ b/src/Memo.Blog.App/Components/Components/Moment/MomentList.razor
@@ -1,3 +1,4 @@
 ﻿<div class="mt-2">
-    <SummaryCard @bind-Items="momentSummaries" />
+    <SummaryCard @bind-Items="@momentSummaries"/>
+    <MButton OnClick="LoadMore">加载</MButton>
 </div>
