--- a/src/Memo.Blog.App/Components/Components/SummaryCard.razor
+++ b/src/Memo.Blog.App/Components/Components/SummaryCard.razor
@@ -3,8 +3,8 @@
     <MRow NoGutters Justify="JustifyTypes.SpaceAround">
         @foreach (var item in Items)
         {
-            <MCol Cols="4">
-                <div @key=item class="ml-4 mr-4 mt-4 text-center">
+            <MCol Cols="@columns">
+                <div @key=item class="ml-4 mr-4 mt-2 mb-2 text-center">
                     <MListItemSubtitle>
                         @item.Title
                     </MListItemSubtitle>
@@ -15,26 +15,4 @@
             </MCol>
         }
     </MRow>
-
-    @*  <MList>
-    @for (int i = 0; i < rows; i++)
-    {
-    <MListItem>
-    <MListItemContent Class="text-center"
-    Style="@($"display: grid;grid-template-columns: repeat({columns}, 1fr);")">
-    @foreach (var item in Items.Skip((i - 1) * columns).Take(columns))
-    {
-    <div @key=item>
-    <MListItemSubtitle>
-    @item.Title
-    </MListItemSubtitle>
-    <MListItemTitle Class="mt-2 font-weight-bold text-h6">
-    @item.Value
-    </MListItemTitle>
-    </div>
-    }
-    </MListItemContent>
-    </MListItem>
-    }
-    </MList> *@
 </MCard>
