--- a/src/Memo.Blog.App/Components/Pages/Home/Components/Moment/Moment.razor
+++ b/src/Memo.Blog.App/Components/Pages/Home/Components/Moment/Moment.razor
@@ -1,5 +1,4 @@
-﻿
-<MPullRefresh Style="margin-top: 20px;"
+﻿<MPullRefresh Class="mt-4"
               OnRefresh="@HandleOnRefreshAsync">
     <div>
         <SummaryCard Items="@_summaries" />
