--- a/src/Memo.Blog.App/Components/Pages/Home/Components/Dashboard/Dashboard.razor
+++ b/src/Memo.Blog.App/Components/Pages/Home/Components/Dashboard/Dashboard.razor
@@ -1,4 +1,4 @@
-﻿<MPullRefresh Class="mt-4"
+﻿<MPullRefresh Class="ml-2 mr-2 mt-4"
               OnRefresh="@HandleOnRefreshAsync">
     <div>
         <SummaryCard Items="@_summaries" />
