--- a/src/Memo.Blog.App/Components/Pages/Home/Components/Article/Article.razor
+++ b/src/Memo.Blog.App/Components/Pages/Home/Components/Article/Article.razor
@@ -1,5 +1,5 @@
 ﻿
-<MPullRefresh Class="mt-4"
+<MPullRefresh Class="ml-2 mr-2 mt-4"
               OnRefresh="@HandleOnRefreshAsync">
     <div>
         <SummaryCard Items="@_summaries" />
