--- a/src/Memo.Blog.App/Components/Pages/Home/Components/Moment/MomentList.razor
+++ b/src/Memo.Blog.App/Components/Pages/Home/Components/Moment/MomentList.razor
@@ -1,28 +1,41 @@
-﻿<MList>
+﻿<MRow Dense Justify="JustifyTypes.Center">
     @foreach (var moment in Moments)
     {
-         <MListItem>
-                <MListItemContent>
+        <MCol Cols="12">
             <MCard Flat
-                   Class="pa-4"
+                   Rounded="@("lg")"
+                   Class="pa-3"
                    Href="@($"/moment/detail/{moment.MomentId}")"
                    data-page-stack-strategy>
-                <div class="subtitle-2 d-flex align-center">
-                    <div class="text-truncate">
-                        @moment.Content
+                <div>
+                    <div class="d-flex flex-no-wrap justify-space-between">
+                        <div>
+                            <div class="subtitle-2 text-truncate-l3">
+                                @moment.Content
+                            </div>
+                            <div class="mt-1 caption d-flex flex-wrap align-center">
+                                @foreach (var tag in moment.Tags)
+                                {
+                                    <MChip Label Color="primary" XSmall Class="mr-1 px-2"
+                                           Style="min-width: min-content;">
+                                        @tag
+                                    </MChip>
+                                }
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="mt-3 caption d-flex justify-space-between">
+                        <div class="d-flex align-center">
+                            @($"点赞 {moment.Likes} · 评论 {moment.Comments}")
+                        </div>
+
+                        <div class=" text--disabled">
+                            @($"{moment.CreateTime.ToString("yyyy-MM-dd HH:mm")}")
+                        </div>
                     </div>
                 </div>
-                <div class="caption d-flex align-center">
-                    @foreach (var tag in moment.Tags)
-                    {
-                        <MChip Label Color="black" Dark XSmall Class="mr-1 px-2"
-                               Style="min-width: min-content;">
-                            @tag
-                        </MChip>
-                    }
-                </div>
             </MCard>
-            </MListItemContent>
-        </MListItem>
+        </MCol>
     }
-</MList>
+</MRow> 
