--- a/src/Memo.Blog.App/MainPage.xaml
+++ b/src/Memo.Blog.App/MainPage.xaml
@@ -6,7 +6,10 @@
     xmlns:local="clr-namespace:Memo.Blog.App"
     BackgroundColor="{DynamicResource PageBackgroundColor}">
 
-    <BlazorWebView x:Name="blazorWebView" HostPage="wwwroot/index.html">
+    <BlazorWebView
+        x:Name="blazorWebView"
+        BlazorWebViewInitialized="Bwv_BlazorWebViewInitialized"
+        HostPage="wwwroot/index.html">
         <BlazorWebView.RootComponents>
             <RootComponent ComponentType="{x:Type local:Components.Main}" Selector="#app" />
         </BlazorWebView.RootComponents>
