--- a/src/Memo.Blog.App/wwwroot/css/app.css
+++ b/src/Memo.Blog.App/wwwroot/css/app.css
@@ -73,10 +73,21 @@ h1:focus {
     }
 
 .home-swiper-slide {
+    margin-top: 10px;
     overflow-y: auto;
     touch-action: pan-y; /* 容器使用了 overflow-y: auto 后会导致swiper无法滑动问题，增加这个可以解决 */
-    height: calc(100vh - 56px - 48px) !important;
+    height: calc(100vh - 56px - 48px - 10px) !important;
 }
+
+.home--swiper-slide-content {
+    display: flex;
+    flex-flow: column;
+    min-height: 100%;
+}
+
+    .home--swiper-slide-content .m-pull-refresh__track {
+        flex: 1 1 auto;
+    }
 
 .text-truncate-l2 {
     display: -webkit-box;
