--- a/src/Memo.Blog.App/Components/Pages/Article/ArticleEdit.razor
+++ b/src/Memo.Blog.App/Components/Pages/Article/ArticleEdit.razor
@@ -1,7 +1,4 @@
-﻿@page "/article/edit"
-@inherits PStackPageBase
+﻿@page "/article/edit/{id?}"
 
-<PageTitle>编辑文章</PageTitle>
+<h3>Article</h3>
 
-<PStackPageBarInit Title="编辑文章">
-</PStackPageBarInit>
