--- a/src/Memo.Blog.App/Components/Pages/Home/Components/Dashboard/Dashboard.razor
+++ b/src/Memo.Blog.App/Components/Pages/Home/Components/Dashboard/Dashboard.razor
@@ -1,9 +1,10 @@
-﻿<MPullRefresh Class="ml-2 mr-2 home--swiper-slide-content"
+﻿<MPullRefresh Class="home-swiper-slide-content"
               CanReleaseText="下拉刷新"
               PullingText="刷新中..."
               SuccessText="刷新成功！"
               OnRefresh="@HandleOnRefreshAsync">
-    <div>
+
+    <div class="ma-2">
         <SummaryCard Items="@_summaries" />
     </div>
 
