--- a/src/Memo.Blog.App/Components/Pages/Home/Components/Moment/MomentList.razor
+++ b/src/Memo.Blog.App/Components/Pages/Home/Components/Moment/MomentList.razor
@@ -1,14 +1,13 @@
-﻿<MRow Dense>
+﻿<MList Dense Style="background-color: transparent">
     @foreach (var moment in Moments)
     {
-        <MCol Cols="12">
-            <MCard Flat
-                   Rounded="@("lg")"
-                   Class="pa-3"
-                   Href="@($"/moment/detail/{moment.MomentId}")"
-                   data-page-stack-strategy>
-                <div>
-                    <div class="d-flex flex-no-wrap justify-space-between">
+        <MListItem style="padding: 0">
+            <MListItemContent>
+                <MCard Flat
+                       Rounded="@("lg")"
+                       Href="@($"/moment/edit/{moment.MomentId}")"
+                       data-page-stack-strategy>
+                    <div class="pa-3">
                         <div>
                             <div class="subtitle-2 text-truncate-l3">
                                 @moment.Content
@@ -23,19 +22,19 @@
                                 }
                             </div>
                         </div>
-                    </div>
 
-                    <div class="mt-3 caption d-flex justify-space-between">
-                        <div class="d-flex align-center">
-                            @($"点赞 {moment.Likes} · 评论 {moment.Comments}")
-                        </div>
+                        <div class="mt-3 caption d-flex justify-space-between">
+                            <div class="d-flex align-center">
+                                @($"点赞 {moment.Likes} · 评论 {moment.Comments}")
+                            </div>
 
-                        <div class=" text--disabled">
-                            @($"{moment.CreateTime.ToString("yyyy-MM-dd HH:mm")}")
+                            <div class=" text--disabled">
+                                @($"{moment.CreateTime.ToString("yyyy-MM-dd HH:mm")}")
+                            </div>
                         </div>
                     </div>
-                </div>
-            </MCard>
-        </MCol>
+                </MCard>
+            </MListItemContent>
+        </MListItem>
     }
-</MRow> 
+</MList>
