--- a/src/Memo.Blog.App/Components/_Imports.razor
+++ b/src/Memo.Blog.App/Components/_Imports.razor
@@ -16,6 +16,8 @@
 @using Memo.Blog.App.Components.Components
 @using Memo.Blog.App.Components.Layout.Navigations
 
+@using Memo.Blog.App.Extensions.Masa;
+
 @using Memo.Blog.App.Services.App
 
 @attribute [Authorize]
